syntax = "proto3";
option java_multiple_files = true;
package com.example.grpc.server.grpcserver.cashier;

message ProtoCashier {
    string name = 1;
}

message DeleteRequest {
    string id = 1;
}

message DeleteResponse {
    string report = 1;
}

message GetRequest {
}

message GetResponse {
    repeated ProtoCashier cashiers = 1;
}

message CreateRequest {
	ProtoCashier cashier = 1;
}

message CreateResponse {
    string id = 1;
}

service CashierService {
    rpc get(GetRequest) returns (GetResponse);
    rpc delete(DeleteRequest) returns (DeleteResponse);
    rpc create(CreateRequest) returns (CreateResponse);
}